# rust-on-kube

./: .gitignore  README.md
argocd/: custom.install.yaml  ingressroute.yaml
backend/: Cargo.toml  Dockerfile
backend/scripts/: docker.build.sh  docker.run.sh
backend/src/: lib.rs  main.rs
docs/: README.md  argocd.md  docker.md  helm.md  traefik.md
helm/backend/: Chart.yaml  values.yaml
helm/backend/templates/: deployment.yaml  ingressroute.yaml
traefik/: dashboard.yaml
